# start-leptos-ssr-workspace

./: .gitignore  Cargo.toml  README.md  biome.json  leptosfmt.toml  package.json  pnpm-lock.yaml
app/: Cargo.toml
app/src/: app.rs  lib.rs  shell.rs
app/src/components/: card.rs  mod.rs  navbar.rs  reactive_indicator.rs  theme_toggle.rs
app/src/components/ui/: button.rs
app/src/routing/: mod.rs  page_home.rs  page_test.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
style/: fonts.css  tailwind.css
