[package]
name = "app"
version = "0.1.0"
edition = "2024"


[dependencies]
cfg-if.workspace = true
http.workspace = true
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_ui.workspace = true
thiserror.workspace = true
tw_merge.workspace = true
wasm-bindgen.workspace = true


[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
]
